@@ -21,6 +21,7 @@ package memory
 
 import (
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/libbeat/logp"
 	sigar "github.com/elastic/gosigar"
 )
 
@@ -67,6 +68,17 @@ func GetSwap() (*SwapStat, error) {
 	err := swap.Get()
 	if err != nil {
 		return nil, err
+	}
+
+	// This shouldn't happen, but it has been reported to happen and
+	// this can provoke too big values for used swap.
+	// Workaround this by assuming that all swap is free in that case.
+	if swap.Free > swap.Total || swap.Used > swap.Total {
+		logp.Debug("memory",
+			"Unexpected values for swap memory - total: %v free: %v used: %v.  Setting swap used to 0.",
+			swap.Total, swap.Free, swap.Used)
+		swap.Free = swap.Total
+		swap.Used = 0
 	}
 
 	return &SwapStat{Swap: swap}, nil
